#
# Makefile
#
# Version:	$Id: Makefile.am,v 1.5 2003/07/22 00:49:28 balleman Exp $
#

netmrg_gatherer_SOURCES = db.cpp devices.cpp events.cpp locks.cpp mappings.cpp monitors.cpp netmrg.cpp rrd.cpp settings.cpp snmp.cpp utils.cpp

noinst_HEADERS = include/common.h include/db.h include/devices.h include/events.h include/locks.h include/mappings.h include/monitors.h include/netmrg.h include/rrd.h include/settings.h include/snmp.h include/types.h include/utils.h

noinst_PROGRAMS = netmrg-gatherer

INCLUDES = -I./include -I/usr/include/libxml2
